# cli

./: .gitignore  API_MAPPING.md  BANDWIDTH_TUNING.md  Cargo.toml  README.md  SECURITY_REVIEW.md  fix_clippy.sh  flake.nix  install.sh  result
.claude-flow/metrics/: performance.json  task-metrics.json
.github/workflows/: ci.yml  release.yml
src/: auth.rs  bandwidth.rs  cache.rs  cache_management.rs  cache_warm.rs  cbor_client.rs  chunked_download.rs  cli.rs  daemon.rs  download.rs  error.rs  fast_client.rs  flake_helper.rs  lib.rs  main.rs  parallel.rs  resolve.rs  self_update_cmd.rs  sig_verify.rs  store_scan.rs  upload.rs  upload_progress.rs  workflow.rs
src/cache/: mod.rs  signing.rs  transfer.rs  warm.rs
src/client/: cbor.rs  mod.rs  request.rs  response.rs
src/commands/: auth.rs  mod.rs  pull.rs  push.rs
src/config/: auth.rs  defaults.rs  mod.rs
src/nix/: flake.rs  mod.rs  resolve.rs  store.rs
src/utils/: chunker.rs  mod.rs  parallel.rs  progress.rs  streaming.rs
